# icpc-reference

.github/workflows/: ccpp.yml  workflow.yml
content/: kactl.tex
content/combinatorial/: multinomial.h
content/contest/: CMakeLists.txt  chapter.tex  template.cpp  test.py
content/data-structures/: Matrix.h  MoQueries.h  RMQ.h  Rope.h  SubMatrix.h  chapter.tex
content/geometry/: 3dHull.h  Angle.h  CirclePolygonIntersection.h  FastDelaunay.h  HullDiameter.h  InsidePolygon.h  LineHullIntersection.h  ManhattanMST.h  MinimumEnclosingCircle.h  PolygonArea.h  PolygonCut.h  PolygonUnion.h
content/graph/: 2sat.h  BellmanFord.h  BiconnectedComponents.h  BinaryLifting.h  CompressTree.h  DFSMatching.h  DijkstraDense.h  DijkstraSparse.h  Dinic.h  DirectedMST.h  EdgeColoring.h  EdmondsKarp.h  FloydWarshall.h  GeneralMatching.h  GlobalMinCut.h  GomoryHu.h  MaximalCliques.h  MaximumClique.h  MinCostMaxFlow.h  MinimumVertexCover.h  PushRelabel.h  SCC.h  TopoSort.h  WeightedMatching.h  chapter.tex  hopcroftKarp.h
content/number-theory/: Eratosthenes.h  FastEratosthenes.h  Fibonacci.h  ModInverse.h  ModLog.h  chapter.tex  phiFunction.h
content/numerical/: BerlekampMassey.h  Determinant.h  FastFourierTransform.h  FastFourierTransformMod.h  FastSubsetTransform.h  HillClimbing.h  IntDeterminant.h  Integrate.h  LinearRecurrence.h  MatrixInverse-mod.h  MatrixInverse.h  NumberTheoreticTransform.h  PolyInterpolate.h  PolyRoots.h  Polynomial.h  Simplex.h  SolveLinear.h  SolveLinear2.h  SolveLinearBinary.h  (+1 more)
doc/: example.h
old-unit-tests/: UnitTestManager.cpp  global.h
(+101 files in other folders)
