cmake_minimum_required(VERSION 3.20)
project(cp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wconversion -static -Wl,--stack=268435456 -O2")
set(CMAKE_CXX_FLAGS_DEBUG "-DNOT_OJ -fno-asm -pedantic -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -Wfatal-errors -fno-sanitize-recover -fstack-protector")
add_library(bits_stdc++ INTERFACE)
target_precompile_headers(bits_stdc++ INTERFACE <bits/stdc++.h>)
add_executable(template template.cpp)
target_link_libraries(template PRIVATE bits_stdc++)